--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -216,6 +216,7 @@ header .navbar ul li a:hover{
   border: 5px solid #002057;
   box-shadow: 0 2px 8px rgba(0, 0, 0);
   cursor: pointer;
+  height: auto;
 }
 .home .image img:hover{
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
