--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -210,12 +210,13 @@ header .navbar ul li a:hover{
   display: flex;
   margin: auto;
   margin-top: 6rem;
-  margin-left: 6rem;
+  margin-left: 25rem;
   padding: 10px;
   border-radius: 50%;
   border: 5px solid #002057;
   box-shadow: 0 2px 8px rgba(0, 0, 0);
   cursor: pointer;
+  height: auto;
 }
 .home .image img:hover{
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
